# stock-market-analysis

./: .dockerignore  .gitignore  DA_project.docx  README.md  biggest_stock_gainers.csv  most_active_stocks.csv  pyproject.toml  requirements.txt
dags/: fmp_to_gbq_dag.py
infrastructure/airflow/: Dockerfile  docker-compose.yaml
src/: main.py  most_active.py  sector_pe_ingestion.py  stock_market_gainers_losers.py
src/stock_market_analysis/: historical_price.py  main.py  most_active.py  pipeline.py
