[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "market-fundamentals"
version = "0.1.0"
description = "End-to-end data engineering pipeline: fundamentals ingestion, warehouse load, Airflow orchestration, and visualization"
authors = [
  { name = "Chamuel Patino", email = "patinochamuel@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10, <3.13"
license = { text = "MIT" }
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Financial and Insurance Industry",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dependencies = [
  "requests>=2.28",
  "pandas>=1.5",
  "fmp-python>=1.3",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
warehouse = [
  "google-cloud-bigquery>=3.6",
  "snowflake-connector-python>=3.0",
]
airflow = [
  "apache-airflow[postgres,google,snowflake,http]>=2.7",
  "apache-airflow-providers-google>=9.0",
  "apache-airflow-providers-snowflake>=3.0",
]
visualization = [
  "looker-sdk>=1.2",
  "tableauserverclient>=0.16",
]
dev = [
  "pytest>=7.0",
  "black>=23.3.0",
  "flake8>=6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--cov=src --cov-report=term-missing"

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(\.direnv|\.eggs|\.git|\.hg|\.mypy_cache|\.nox|\.tox|\.venv|venv|_build|buck-out|build|dist)/
'''
